--- a/src/main/resources/view/Admin_view/Admin_profile_form.fxml
+++ b/src/main/resources/view/Admin_view/Admin_profile_form.fxml
@@ -3,11 +3,18 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="pane2" prefHeight="792.0" prefWidth="1239.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.AdminProfileFormController">
    <children>
+      <ImageView fitHeight="792.0" fitWidth="1239.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../images/subpane.jpg" />
+         </image>
+      </ImageView>
       <AnchorPane layoutX="207.0" layoutY="160.0" prefHeight="532.0" prefWidth="826.0" style="-fx-background-color: #EEF5FF; -fx-background-radius: 30;">
          <children>
             <Label layoutX="50.0" layoutY="120.0" prefHeight="33.0" prefWidth="189.0" text="Name  :" textFill="#282725">
