--- a/src/main/resources/view/Admin_view/All_Transaction_history_form.fxml
+++ b/src/main/resources/view/Admin_view/All_Transaction_history_form.fxml
@@ -9,11 +9,18 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="root" prefHeight="792.0" prefWidth="1239.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.AllTransactionHistoryFormController">
    <children>
-      <Label layoutX="359.0" layoutY="35.0" prefHeight="51.0" prefWidth="431.0" text="Transaction History" textFill="#002365">
+      <ImageView fitHeight="792.0" fitWidth="1239.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../images/subpane.jpg" />
+         </image>
+      </ImageView>
+      <Rectangle arcHeight="30.0" arcWidth="30.0" fill="WHITE" height="86.0" layoutX="396.0" layoutY="-11.0" opacity="0.51" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="423.0" />
+      <Label alignment="CENTER" layoutX="405.0" layoutY="2.0" prefHeight="65.0" prefWidth="403.0" text="Transaction History" textFill="#002365">
          <font>
             <Font name="Abyssinica SIL" size="44.0" />
          </font>
