--- a/src/main/resources/view/Admin_view/Manage_book_form.fxml
+++ b/src/main/resources/view/Admin_view/Manage_book_form.fxml
@@ -9,10 +9,17 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="792.0" prefWidth="1239.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.ManageBookFormController">
    <children>
+      <ImageView fitHeight="792.0" fitWidth="1239.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../images/subpane.jpg" />
+         </image>
+      </ImageView>
+      <Rectangle arcHeight="30.0" arcWidth="30.0" fill="WHITE" height="108.0" layoutX="445.0" layoutY="-27.0" opacity="0.5" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="384.0" />
       <TextField fx:id="txtTitle" layoutX="194.0" layoutY="131.0" prefHeight="46.0" prefWidth="316.0" promptText="Book Title" style="-fx-background-radius: 20;">
          <font>
             <Font size="15.0" />
@@ -55,7 +62,7 @@
          </font>
       </Label>
       <ComboBox fx:id="cmbAvalability" layoutX="789.0" layoutY="256.0" prefHeight="46.0" prefWidth="316.0" promptText="select status" style="-fx-background-color: whiite; -fx-background-radius: 20;" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="451.0" layoutY="22.0" prefHeight="60.0" prefWidth="368.0" text="Manage Books" textFill="#08007c">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="451.0" layoutY="8.0" prefHeight="60.0" prefWidth="368.0" text="Manage Books" textFill="#002365">
          <font>
             <Font name="Abyssinica SIL" size="44.0" />
          </font>
