--- a/src/main/resources/view/Admin_view/Unreturned_book_form.fxml
+++ b/src/main/resources/view/Admin_view/Unreturned_book_form.fxml
@@ -4,26 +4,35 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="792.0" prefWidth="1239.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.UnreturnedBookFormController">
    <children>
-      <Label layoutX="394.0" layoutY="46.0" prefHeight="60.0" prefWidth="393.0" text="Unreturned Books" textFill="#06004f">
+      <ImageView fitHeight="870.0" fitWidth="1239.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../images/bg2.jpg" />
+         </image>
+      </ImageView>
+      <Rectangle arcHeight="30.0" arcWidth="30.0" fill="WHITE" height="99.0" layoutX="400.0" layoutY="-16.0" opacity="0.5" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="440.0" />
+      <Label alignment="CENTER" layoutX="423.0" layoutY="7.0" prefHeight="60.0" prefWidth="393.0" text="Unreturned Books" textFill="#06004f">
          <font>
             <Font name="Abyssinica SIL" size="44.0" />
          </font>
       </Label>
-      <TableView fx:id="tblOverdueBooks" layoutX="211.0" layoutY="217.0" prefHeight="379.0" prefWidth="759.0">
+      <TableView fx:id="tblOverdueBooks" layoutX="240.0" layoutY="221.0" prefHeight="379.0" prefWidth="759.0">
         <columns>
           <TableColumn fx:id="colEmail" prefWidth="186.0" text="Borrower Email" />
           <TableColumn fx:id="colBook" prefWidth="222.0" text="Book name" />
             <TableColumn fx:id="colDate" prefWidth="196.0" text="Due date" />
-            <TableColumn fx:id="colOverdueDays" prefWidth="138.0" text="Days overdue" />
+            <TableColumn fx:id="colOverdueDays" prefWidth="154.0" text="Days overdue" />
         </columns>
       </TableView>
-      <ComboBox fx:id="cmbBranch" layoutX="863.0" layoutY="133.0" onAction="#cmbBranchOnActions" prefHeight="36.0" prefWidth="279.0" promptText="Select a branch" style="-fx-background-color: white;" />
-      <Label layoutX="753.0" layoutY="137.0" prefHeight="28.0" prefWidth="110.0" text="Branch :">
+      <ComboBox fx:id="cmbBranch" layoutX="535.0" layoutY="723.0" onAction="#cmbBranchOnActions" prefHeight="36.0" prefWidth="279.0" promptText="Select a branch" style="-fx-background-color: transperant;" />
+      <Label layoutX="425.0" layoutY="727.0" prefHeight="28.0" prefWidth="110.0" text="Branch :">
          <font>
             <Font size="18.0" />
          </font>
