--- a/src/main/resources/view/Admin_view/Admin_dashboard-form.fxml
+++ b/src/main/resources/view/Admin_view/Admin_dashboard-form.fxml
@@ -87,17 +87,17 @@
                </font>
             </JFXButton>
             <ImageView fx:id="imgExit" fitHeight="51.0" fitWidth="51.0" layoutX="1151.0" layoutY="15.0" onMouseClicked="#imgExitOnAction" pickOnBounds="true" preserveRatio="true" visible="false">
-               <image>
+               <!--<image>
                   <Image url="@../../images/icons8-close-window-100.png" />
-               </image>
+               </image>-->
                <effect>
                   <DropShadow />
                </effect>
             </ImageView>
             <ImageView fx:id="imgProfile" fitHeight="51.0" fitWidth="51.0" layoutX="1083.0" layoutY="15.0" onMouseClicked="#imgProfileOnAction" pickOnBounds="true" preserveRatio="true" visible="false">
-               <image>
+               <!--<image>
                   <Image url="@../../images/icons8-admin-settings-female-64.png" />
-               </image>
+               </image>-->
                <effect>
                   <DropShadow />
                </effect>
