--- a/src/main/resources/view/User_view/Borrow_book_form.fxml
+++ b/src/main/resources/view/User_view/Borrow_book_form.fxml
@@ -58,9 +58,9 @@
          </font>
       </TextField>
       <ImageView fx:id="img1" fitHeight="33.0" fitWidth="36.0" layoutX="734.0" layoutY="144.0" pickOnBounds="true" preserveRatio="true" visible="false">
-         <image>
+        <!-- <image>
             <Image url="@../../images/icons8-search-80.png" />
-         </image>
+         </image>-->
       </ImageView>
       <AnchorPane layoutX="56.0" layoutY="143.0" prefHeight="590.0" prefWidth="526.0">
          <children>
