--- a/src/main/resources/view/Admin_view/Manage_book_form.fxml
+++ b/src/main/resources/view/Admin_view/Manage_book_form.fxml
@@ -78,9 +78,9 @@
       <JFXButton fx:id="btnAdd" contentDisplay="CENTER" layoutX="857.0" layoutY="429.0" onAction="#btnAddOnAction" prefHeight="52.0" prefWidth="212.0" style="-fx-background-color: #45CFDD; -fx-background-radius: 20;" styleClass="button-color2" text="Add ">
          <graphic>
             <ImageView fitHeight="31.0" fitWidth="41.0" pickOnBounds="true" preserveRatio="true" visible="false">
-               <image>
+              <!-- <image>
                   <Image url="@../../images/icons8-add-64.png" />
-               </image>
+               </image>-->
             </ImageView>
          </graphic>
          <font>
@@ -90,9 +90,9 @@
       <JFXButton fx:id="btnUpdate" contentDisplay="CENTER" layoutX="857.0" layoutY="542.0" onAction="#btnUpdateOnAction" prefHeight="52.0" prefWidth="212.0" style="-fx-background-color: #A0BFE0; -fx-background-radius: 20;" text="Update">
          <graphic>
             <ImageView fitHeight="31.0" fitWidth="41.0" pickOnBounds="true" preserveRatio="true" visible="false">
-               <image>
+            <!--   <image>
                   <Image url="@../../images/icons8-edit-80.png" />
-               </image>
+               </image>-->
             </ImageView>
          </graphic>
          <font>
@@ -102,9 +102,9 @@
       <JFXButton fx:id="btnDelete" contentDisplay="CENTER" layoutX="857.0" layoutY="651.0" onAction="#btnDeleteOnAction" prefHeight="52.0" prefWidth="212.0" style="-fx-background-color: #FF9B9B; -fx-background-radius: 20;" text="Delete">
          <graphic>
             <ImageView fitHeight="31.0" fitWidth="43.0" pickOnBounds="true" preserveRatio="true" visible="false">
-               <image>
+              <!-- <image>
                   <Image url="@../../images/icons8-delete-80.png" />
-               </image>
+               </image>-->
             </ImageView>
          </graphic>
          <font>
