--- a/src/main/resources/view/User_view/User_dashboard_form.fxml
+++ b/src/main/resources/view/User_view/User_dashboard_form.fxml
@@ -40,14 +40,14 @@
                </font>
             </JFXButton>
             <ImageView fitHeight="41.0" fitWidth="40.0" layoutX="1172.0" layoutY="20.0" onDragOver="#imgClose" onMouseClicked="#imageCloseOnAction" pickOnBounds="true" preserveRatio="true" visible="false">
-               <image>
+             <!--  <image>
                   <Image url="@../../images/icons8-close-window-100.png" />
-               </image>
+               </image>-->
             </ImageView>
             <ImageView fx:id="imgUsername" fitHeight="40.0" fitWidth="40.0" layoutX="1071.0" layoutY="20.0" onMouseClicked="#imgUserNameOnAction" pickOnBounds="true" preserveRatio="true" visible="false">
-               <image>
+               <!--<image>
                   <Image url="@../../images/icons8-test-account-80.png" />
-               </image>
+               </image>-->
                <effect>
                   <InnerShadow />
                </effect>
@@ -79,9 +79,9 @@
                </font>
             </TextField>
             <ImageView fx:id="img1" fitHeight="40.0" fitWidth="40.0" layoutX="766.0" layoutY="113.0" pickOnBounds="true" preserveRatio="true" visible="false">
-               <image>
+              <!-- <image>
                   <Image url="@../../images/icons8-search-80.png" />
-               </image>
+               </image>-->
             </ImageView>
             <TableView fx:id="tblDashboardBook" layoutX="183.0" layoutY="264.0" prefHeight="439.0" prefWidth="898.0">
               <columns>
