--- a/src/main/resources/view/Admin_view/Admin_dashboard-form.fxml
+++ b/src/main/resources/view/Admin_view/Admin_dashboard-form.fxml
@@ -94,13 +94,16 @@
                   <DropShadow />
                </effect>
             </ImageView>
-            <ImageView fx:id="imgProfile" fitHeight="51.0" fitWidth="51.0" layoutX="1083.0" layoutY="15.0" onMouseClicked="#imgProfileOnAction" pickOnBounds="true" preserveRatio="true" visible="false">
+            <ImageView fx:id="imgProfile" fitHeight="51.0" fitWidth="51.0" layoutX="1083.0" layoutY="15.0" onMouseClicked="#imgProfileOnAction" pickOnBounds="true" preserveRatio="true">
                <!--<image>
                   <Image url="@../../images/icons8-admin-settings-female-64.png" />
                </image>-->
                <effect>
                   <DropShadow />
                </effect>
+               <image>
+                  <Image url="@../../images/profile-circle-icon-2048x2048-cqe5466q.png" />
+               </image>
             </ImageView>
          </children>
       </AnchorPane>
