--- a/src/main/resources/view/User_view/User_dashboard_form.fxml
+++ b/src/main/resources/view/User_view/User_dashboard_form.fxml
@@ -39,20 +39,20 @@
                   <Font size="14.0" />
                </font>
             </JFXButton>
-            <ImageView fitHeight="41.0" fitWidth="40.0" layoutX="1172.0" layoutY="20.0" onDragOver="#imgClose" onMouseClicked="#imageCloseOnAction" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="41.0" fitWidth="40.0" layoutX="1172.0" layoutY="20.0" onDragOver="#imgClose" onMouseClicked="#imageCloseOnAction" pickOnBounds="true" preserveRatio="true" visible="false">
                <image>
                   <Image url="@../../images/icons8-close-window-100.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="imgUsername" fitHeight="40.0" fitWidth="40.0" layoutX="1071.0" layoutY="20.0" onMouseClicked="#imgUserNameOnAction" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgUsername" fitHeight="40.0" fitWidth="40.0" layoutX="1064.0" layoutY="14.0" onMouseClicked="#imgUserNameOnAction" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../images/icons8-test-account-80.png" />
+                  <Image url="@../../images/profile-circle-icon-2048x2048-cqe5466q.png" />
                </image>
                <effect>
                   <InnerShadow />
                </effect>
             </ImageView>
-            <Label layoutX="1048.0" layoutY="56.0" prefHeight="16.0" prefWidth="119.0" text="User Name" textFill="#1e0000">
+            <Label layoutX="1048.0" layoutY="56.0" prefHeight="20.0" prefWidth="77.0" text="User Name" textFill="#1e0000">
                <font>
                   <Font name="DejaVuMathTeXGyre-Regular" size="14.0" />
                </font>
